refact: 원시타입제거 및 Array제거